--- a/reactiveform/src/app/app.component.html
+++ b/reactiveform/src/app/app.component.html
@@ -1,11 +1,37 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
-  {{registrationform.value | json}}
-  <form [formGroup]="registrationform"> 
+  <!-- {{registrationform.value | json}} -->
+  {{registrationform2.value | json}}
+  <!-- <form [formGroup]="registrationform">  -->
+  <form [formGroup]="registrationform2">
     <div class="form-group">
       <label>Username</label>
-      <input type="text" class="form-control" formControlName="userName">
+      <input type="text" class="form-control" formControlName="userName" 
+          [class.is-invalid]="userName.invalid && userName.touched" />
+      <!-- <small class="text-danger" [class.d-none]="userName.valid || userName.untouched"> username is required</small> -->
+      <div *ngIf="userName.invalid && userName.touched">
+          <small class="text-danger" *ngIf="userName.errors?.required"> username is required</small>
+          <small class="text-danger" *ngIf="userName.errors?.minlength"> username must be at least 3 characters</small>
+          <small class="text-danger" *ngIf="userName.errors?.forbiddenName">{{userName.errors?.forbiddenName.value}} username not allowed</small>
+      </div>
     </div>
+
+    <div class="form-group">
+      <label>Email</label>
+      <button type="button" class="btn btn-secondary btn-sm m-2" (click)="addAlternateEmails()">Add Email</button>
+      <input type="email" class="form-control" formControlName="email" [class.is-invalid]="email.invalid && email.touched" >
+      <small class="text-danger" [class.d-none]="email.valid || email.untouched"> Email is required</small>
+
+      <div formArrayName="alternateEmails" *ngFor="let email of alternateEmails.controls; let i=index">
+          <input type="text" class="form-control my-1"  [formControlName]="i">
+      </div>
+    </div>
+  
+    <div class="form-check mb-3">
+      <input type="checkbox" class="form-check-input" id="promotioncheck" formControlName="subscribe">
+      <label class="form-check-label" for="promotioncheck">Send me promotional offers</label>
+    </div>
+
 
     <div class="form-group">
       <label>Password</label>
@@ -14,7 +40,8 @@
 
     <div class="form-group">
       <label>Confirm Password</label>
-      <input type="password" class="form-control" formControlName="confirmPassword">
+      <input type="password" class="form-control" formControlName="confirmPassword" [class.is-invalid]="registrationform2.errors?.misMatch">
+      <small class="text-danger" *ngIf="registrationform2.errors?.misMatch"> password do not match</small>
     </div>
 
       <br><hr><br>
